@@ -1,3 +1,6 @@
+Jul 14, 2021
+  AGR gene extractor: fixed code to not emit duplicate gene entries
+
 Jun 17, 2021
   improved code for handling species
 
